syntax = "proto3";

package purchasepb;

option go_package = "github.com/CharLottery/proto/purchasepb;purchasepb";

service PurchaseService {
  rpc BuyTicket(BuyTicketRequest) returns (BuyTicketResponse);
}

message BuyTicketRequest {
  int64 user_id = 1;        // ID пользователя
  int64 lottery_id = 2;     // ID лотереи
  repeated int32 numbers = 3;  // 5 чисел, которые пользователь вводит
}

message BuyTicketResponse {
  bool success = 1;
  string message = 2;
  int64 ticket_id = 3;      // ID для билета
  int64 user_id = 4;        // ID пользователя, который купил билет
  int64 lottery_id = 5;     // ID лотереи, для которой куплен билет
  repeated int32 numbers = 6;  // Числа, которые были выбраны пользователем
}
